--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +30,6 @@
   "eslintConfig": {
     "extends": [
       "react-app"
-      
     ]
   },
   "browserslist": {
